I think I fixed word-wrapping

--- a/style.css
+++ b/style.css
@@ -182,6 +182,8 @@ td {
   border: 2px solid red;
   width: 33%;
   height: auto;
+  padding: 12px;
+  word-wrap: break-word;
 }
 /* Header effect */
 #effect {
